# flutter_bing_client

./: README.md  pubspec.yaml
.github/workflows/: main.yml  release.yml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  types.dart  util.dart
lib/comps/: chat_page.dart  chats_list.dart  code_wrapper.dart  desktop_webview_cookie.dart  mobile_webview_cookie.dart  new_chat.dart  settiing_page.dart
lib/comps/Chat/: chat_page.dart  chats_list.dart  new_chat.dart
lib/comps/Cookie/: desktop_webview_cookie.dart  mobile_webview_cookie.dart
lib/comps/Markdown/: code_wrapper.dart  custom_node.dart  edit_markdown_page.dart  html_support.dart  latex.dart  markdown_page.dart
lib/src/rust/api/: back.dart  (+4 more)
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: bing_client_types.rs  bing_client_wrap.rs  init.rs  mod.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_bing_client.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_bing_client.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
(+12 files in other folders)
