[package]
name = "rust_lib_flutter_bing_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.81"
bing_client = { git = "https://github.com/canxin121/bing_client", features = [
    "allow-invalid-tls",
] }
dashmap = { version = "5.5.3", features = ["serde"] }
flutter_rust_bridge = { version = "=2.0.0-dev.32", features = [
    "log",
    "anyhow",
    "console_error_panic_hook",
] }
genawaiter = "0.99.1"
lazy_static = "1.4.0"
log = "0.4.21"
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
